// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal header it matches snapshot with no props 1`] = `
<ModalHeader>
  <ModalHeaderstyles__Header>
    <div
      className="ModalHeaderstyles__Header-sc-1f4o000-0 hfQxOK"
    >
      Header
    </div>
  </ModalHeaderstyles__Header>
</ModalHeader>
`;

exports[`Modal header it matches snapshot with props 1`] = `
<ModalHeader
  className="className"
  style={
    Object {
      "display": "inline",
    }
  }
>
  <ModalHeaderstyles__Header
    className="className"
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="ModalHeaderstyles__Header-sc-1f4o000-0 hfQxOK className"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      Header
    </div>
  </ModalHeaderstyles__Header>
</ModalHeader>
`;
